# carp

./: .dockerignore  .env  .gitignore  404.html  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml  index.html  package-lock.json  package.json  pitfalls.md  sitemap.xml
entity/: Cargo.toml
entity/src/: address.rs  address_credential.rs  block.rs  lib.rs  prelude.rs  stake_credential.rs  transaction.rs  transaction_input.rs  transaction_output.rs  tx_credential.rs
indexer/: Cargo.toml  README.md  config.yml
indexer/.cargo/: config.toml
indexer/benchmark_generator/: Cargo.toml  config.yml
indexer/benchmark_generator/src/: main.rs  mapper.rs  tx_event.rs  utils.rs
indexer/configs/: cardano_node.yml  config.yml  custom.yml  default.yml  oura.yml
indexer/dag-test/: Cargo.toml
indexer/dag-test/src/: main.rs
indexer/dag-test/src/tasks/: test.rs
indexer/entity/: Cargo.toml
indexer/entity/src/: address.rs  address_credential.rs  asset_mint.rs  asset_utxos.rs  block.rs  block_minter.rs  cip25_entry.rs  dex_mean_price.rs  dex_swap.rs  genesis.rs  governance_votes.rs  lib.rs  native_asset.rs  plutus_data.rs  plutus_data_hash.rs  prelude.rs  projected_nft.rs  stake_credential.rs  stake_delegation.rs  stake_delegation_drep.rs  transaction.rs  transaction_input.rs  transaction_metadata.rs  transaction_output.rs  transaction_reference_input.rs  tx_credential.rs
indexer/execution_plans/: default.ini  default.toml  dex_prices.toml  paima.toml  readonly.toml
indexer/genesis/: mainnet.json  preprod-byron-genesis.json  preview-byron-genesis.json  test-shelley-genesis.json
indexer/migration/: Cargo.toml
indexer/migration/src/: lib.rs  m20220210_000001_create_block_table.rs  m20220210_000002_create_transaction_table.rs  m20220211_000001_create_stake_credential_table.rs  m20220211_000002_create_tx_credential_table.rs  m20220211_000003_create_address_table.rs  m20220211_000004_create_address_credential_table.rs  m20220211_000005_create_transaction_output_table.rs  m20220211_000006_create_transaction_input_table.rs  m20220508_000007_create_metadata_table.rs  m20220520_000008_create_native_asset_table.rs  m20220520_000009_create_asset_mint_table.rs  m20220520_000010_create_cip25_entry_table.rs  m20220528_000011_create_plutus_data_hash_table.rs  m20220528_000012_create_plutus_data_table.rs  m20220808_000013_create_transaction_reference_input_table.rs  m20220811_000014_create_block_minter_table.rs  m20221020_000014_create_dex_mean_price_table.rs  m20221031_000014_create_dex_table.rs  m20221031_000015_create_dex_swap_table.rs  m20221031_000015_create_dex_views.rs  m20230223_000015_modify_block_table.rs  m20230927_000016_create_stake_delegation_table.rs  m20230927_231206_create_stake_delegation_table.rs  m20231025_000016_projected_nft.rs  m20231025_000017_projected_nft.rs  m20231220_000018_asset_utxo_table.rs  m20240229_000019_add_block_tx_count_column.rs  m20240326_000020_create_drep_delegation_table.rs  m20240326_000021_create_governance_voting_table.rs  m20240920_000022_create_genesis_tracking_table.rs
indexer/plan-visualizer/: Cargo.toml  README.md
indexer/plan-visualizer/src/: generate_image.rs  main.rs
indexer/reparse/: Cargo.toml  README.md
indexer/reparse/src/: main.rs  reparse.rs
indexer/rollback/: Cargo.toml  README.md
indexer/rollback/src/: main.rs
indexer/src/: byron.rs  cli.rs  common.rs  engine.rs  era_common.rs  genesis.rs  main.rs  multiera.rs  perf_aggregator.rs  postgres_sink.rs  relation_map.rs  setup.rs  sink.rs  tracing_utils.rs  types.rs
indexer/src/sinks/: cardano.rs  mod.rs
indexer/src/sources/: cardano.rs  mod.rs  n2c.rs  oura_source.rs
indexer/src/tasks/: byron_inputs.rs  byron_outputs.rs  byron_txs.rs  database_task.rs  era_common.rs  mod.rs  utils.rs
indexer/src/tasks/byron/: byron_address.rs  byron_executor.rs  byron_inputs.rs  byron_outputs.rs  byron_txs.rs  mod.rs
indexer/src/tasks/multiera/: mod.rs  multiera_address.rs  multiera_address_credential_relations.rs  multiera_executor.rs  multiera_outputs.rs  multiera_stake_credentials.rs  multiera_tx_credential_relations.rs  multiera_txs.rs  multiera_unused_input.rs  multiera_used_inputs.rs
indexer/task-docgen/: Cargo.toml
indexer/task-docgen/src/: main.rs
indexer/tasks/: Cargo.toml
indexer/tasks/src/: database_task.rs  era_common.rs  example_task.rs  execution_plan.rs  lib.rs  task_macro.rs  types.rs  utils.rs
indexer/tasks/src/byron/: byron_address.rs  byron_block.rs  byron_block_minter.rs  byron_executor.rs  byron_inputs.rs  byron_outputs.rs  byron_txs.rs  mod.rs
indexer/tasks/src/config/: AddressConfig.rs  EmptyConfig.rs  PayloadAndReadonlyConfig.rs  PayloadConfig.rs  ReadonlyConfig.rs  ScriptHashConfig.rs  mod.rs
indexer/tasks/src/dsl/: database_task.rs  default_impl.rs  example_task.rs  execution_context.rs  markdown_task.rs  mod.rs  task_macro.rs
indexer/tasks/src/genesis/: genesis_block.rs  genesis_executor.rs  genesis_txs.rs  mod.rs  shelley_genesis.rs
indexer/tasks/src/multiera/: mod.rs  multiera_address.rs  multiera_address_credential_relations.rs  multiera_address_delegation.rs  multiera_asset_mint.rs  multiera_asset_utxo.rs  multiera_block.rs  multiera_cip25entry.rs  multiera_datum.rs  multiera_drep_delegation.rs  multiera_executor.rs  multiera_governance_voting.rs  multiera_metadata.rs  multiera_minswap_v1_mean_price.rs  multiera_minswap_v1_swap.rs  multiera_outputs.rs  multiera_projected_nft.rs  multiera_reference_inputs.rs  multiera_stake_credentials.rs  multiera_sundaeswap_v1_mean_price.rs  multiera_sundaeswap_v1_swap.rs  multiera_tx_credential_relations.rs  multiera_txs.rs  multiera_unused_input.rs  multiera_used_inputs.rs  multiera_used_outputs.rs  multiera_wingriders_v1_mean_price.rs  multiera_wingriders_v1_swap.rs  relation_map.rs
indexer/tasks/src/multiera/dex/: common.rs  minswap_v1.rs  mod.rs  sundaeswap_v1.rs  wingriders_v1.rs
indexer/tasks/src/multiera/utils/: cip25_parse.rs  common.rs  dex.rs  mod.rs  user_asset.rs
indexer/tasks/tests/: genesis_helpers.rs  genesis_tests.proptest-regressions  genesis_tests.rs
(+524 files in other folders)
