[workspace]
members = [
    "indexer",
    "indexer/entity",
    "indexer/migration",
    "indexer/rollback",
    "indexer/reparse",
    "indexer/tasks",
    "indexer/plan-visualizer",
    "indexer/task-docgen"
]


[workspace.dependencies]
# cml-chain = { version = "6.0.0" }
# cml-core = { version = "6.0.0" }
# cml-crypto = { version = "6.0.0" }
# cml-multi-era = { version = "6.0.0" }

cml-chain = { git = "https://github.com/dcSpark/cardano-multiplatform-lib", rev = "b7acbd3634f5ba8402a9704f0413bd434ed157c3" }
cml-core = { git = "https://github.com/dcSpark/cardano-multiplatform-lib", rev = "b7acbd3634f5ba8402a9704f0413bd434ed157c3" }
cml-crypto = { git = "https://github.com/dcSpark/cardano-multiplatform-lib", rev = "b7acbd3634f5ba8402a9704f0413bd434ed157c3" }
cml-multi-era = { git = "https://github.com/dcSpark/cardano-multiplatform-lib", rev = "b7acbd3634f5ba8402a9704f0413bd434ed157c3" }
