[package]
name = "entity"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.6.0", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "macros",
], default-features = false }
serde = "1.0.136"
