[package]
name = "entity"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pallas = { version = "0.18.2" }
sea-orm = { git = "https://github.com/dcSpark/sea-orm", branch = "insert-many-returning", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "macros",
], default-features = false }
serde = "1.0.152"
