[package]
name = "plan-visualizer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.1", features = ["derive"] }
tracing-subscriber = "0.3.9"
tracing = "0.1.31"
tasks = { path = "../tasks" }
dot = { git = "https://github.com/dcSpark/dot-rust", branch = "subgraph" }
strum = "0.24"
strum_macros = "0.24"
toml = { version = "0.5", features = ["preserve_order"] }