[package]
name = "plan-visualizer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# [local]
tasks = { path = "../tasks" }

# [plan-visualizer]
anyhow = { version = "1.0.69" }
clap = { version = "3.1", features = ["derive"] }
dot = { git = "https://github.com/dcSpark/dot-rust", branch = "subgraph" }
strum = { version = "0.24" }
strum_macros = { version = "0.24" }
toml = { version = "0.5", features = ["preserve_order"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16" }
