[package]
name = "reparse"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# [local]
entity = { path = "../entity" }

# [reparse]
anyhow = { version = "1.0.69" }
cml-chain = { git = "https://github.com/dcSpark/cardano-multiplatform-lib", rev = "2227ab6e6a0ca157c94edca250ecb2eb0f7d08b5" }
cml-core = { git = "https://github.com/dcSpark/cardano-multiplatform-lib", rev = "2227ab6e6a0ca157c94edca250ecb2eb0f7d08b5" }
cml-crypto = { git = "https://github.com/dcSpark/cardano-multiplatform-lib", rev = "2227ab6e6a0ca157c94edca250ecb2eb0f7d08b5" }
cml-multi-era = { git = "https://github.com/dcSpark/cardano-multiplatform-lib", rev = "2227ab6e6a0ca157c94edca250ecb2eb0f7d08b5" }
dotenv = { version = "0.15.0" }
futures = { version = "0.3.21" }
hex = { version = "0.4.0" }
sea-schema = { git = "https://github.com/dcSpark/sea-schema", branch = "bump-sea-x", default-features = false, features = [
    "migration",
    "debug-print",
] }
tokio = { version = "1.25.0", features = ["full"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16" }
