[package]
name = "reparse"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# [local]
entity = { path = "../entity" }

# [reparse]
anyhow = { version = "1.0.69" }
cml-chain = { workspace = true }
cml-core = { workspace = true }
cml-crypto = { workspace = true }
cml-multi-era = { workspace = true }
dotenv = { version = "0.15.0" }
futures = { version = "0.3.21" }
hex = { version = "0.4.0" }
sea-schema = { git = "https://github.com/dcSpark/sea-schema", branch = "bump-sea-x", default-features = false, features = [
    "migration",
    "debug-print",
] }
tokio = { version = "1.25.0", features = ["full"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16" }
