[package]
name = "rollback"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# [local]
entity = { path = "../entity" }

# [rollback]
anyhow = { version = "1.0.69" }
clap = { version = "3.1", features = ["derive"] }
dotenv = { version = "0.15.0" }
sea-schema = { git = "https://github.com/dcSpark/sea-schema", branch = "bump-sea-x", default-features = false, features = [
    "migration",
    "debug-print",
] }
tokio = { version = "1.25.0", features = ["full"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16" }
