[package]
name = "tasks"
version = "0.0.0"
edition = "2021"

[lib]
name = "tasks"

[dependencies]
dcspark-core = { git = "https://github.com/dcSpark/dcspark-core.git", rev = "572af17e3e22101dee64e0999049a571aea26e0f" }
dcspark-blockchain-source = { git = "https://github.com/dcSpark/dcspark-core.git", rev = "572af17e3e22101dee64e0999049a571aea26e0f" }

# [local]
entity = { path = "../entity" }

# [tasks]
anyhow = { version = "1.0.69" }
cml-chain = { git = "https://github.com/dcSpark/cardano-multiplatform-lib", rev = "c5740393f10b7a68aa4719fbbef5a49170501ef6" }
cml-core = { git = "https://github.com/dcSpark/cardano-multiplatform-lib", rev = "c5740393f10b7a68aa4719fbbef5a49170501ef6" }
cml-crypto = { git = "https://github.com/dcSpark/cardano-multiplatform-lib", rev = "c5740393f10b7a68aa4719fbbef5a49170501ef6" }
cml-multi-era = { git = "https://github.com/dcSpark/cardano-multiplatform-lib", rev = "c5740393f10b7a68aa4719fbbef5a49170501ef6" }
cardano-projected-nft = { git = "https://github.com/dcSpark/projected-nft-whirlpool.git", rev = "7ba9a2f7a613f38bbce8f48a7d8575739e9caee0" }
cfg-if = { version = "0.1.10" }
cryptoxide = { version = "0.4.2" }
hex = { version = "0.4.3" }
inventory = { version = "0.2.3" }
markdown-gen = { git = "https://github.com/dcSpark/markdown-gen-rs", branch = "hbina-add-ability-to-write-raw-str" }
nameof = { version = "1.2.2" }
pallas = { version = "0.18.2" }
paste = { version = "1.0.11" }
sea-orm = { git = "https://github.com/dcSpark/sea-orm", branch = "insert-many-returning", features = [ "macros" ], default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
shred = { git = "https://github.com/dcSpark/shred", branch = "builder-getters" }
tokio = { version = "1.16.1", features = ["full"] }
toml = { version = "0.5", features = ["preserve_order"] }
urlencoding = { version = "2.1.2" }
tracing-subscriber = { version = "0.3.16" }
tracing = { version = "0.1.37" }

[features]
default = ["build_rust_task"]
build_rust_task = []
build_markdown_task = []
